--- a/solidwork.html
+++ b/solidwork.html
@@ -3,16 +3,13 @@
 <head>
     <title>SolidWork - Sam Wong</title>
     <meta charset="utf-8" />
-	<style>
-            .box {display:flex;}
-            mode-viewer {width: 800px; height: 500px; margin:0, auto}
-    </style>
+	<link href="css/style.css" rel="stylesheet">
 	<script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
 	
 </head>
 <body>
-	<div style="border:1px solid black">
-                <model-viewer camera-controls alt="Model" src="img/WindCurtainV4.glb">
+	<div>
+                <model-viewer camera-controls alt="Model" src="solidwork/WindCurtainV4.glb">
                 </model-viewer>
     </div>
 	<!-- Javascript -->
