--- a/solidwork.html
+++ b/solidwork.html
@@ -3,9 +3,13 @@
 <head>
     <title>SolidWork - Sam Wong</title>
     <meta charset="utf-8" />
-	<link href="css/style.css" rel="stylesheet">
-	<script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
-	
+    <link href="css/style.css" rel="stylesheet">
+    <script src="https://unpkg.com/@webcomponents/webcomponentsjs@2.1.3/webcomponents-loader.js"></script>
+    <style>
+	model-viewer {
+	width: 800px;
+	height: 600px;}
+    </style>
 </head>
 <body>
 	<div>
