3rd Version Updated on 23th Aug 2023

--- a/solidwork.html
+++ b/solidwork.html
@@ -8,12 +8,20 @@
     <style>
 	model-viewer {
 	width: 800px;
-	height: 600px;}
+	height: 600px;
+	}
+	
+	.center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+	}
     </style>
 </head>
 <body>
 	<div>
-                <model-viewer camera-controls alt="Model" src="solidwork/WindCurtainV4.glb">
+                <model-viewer camera-controls alt="Model" src="solidwork/WindCurtainV4.glb" class="center">
                 </model-viewer>
     </div>
 	<!-- Javascript -->
