4th Version on 23th Aug 2023

--- a/samwong.html
+++ b/samwong.html
@@ -39,6 +39,7 @@
 				        <li><a href="#education">Education</a></li>
 				        <li><a href="#skills">Skills</a></li>
 						<li><a href="#achievement">Achievements</a></li>
+						<li><a href="#solidwork">Solid Works</a></li>
 						<li><a href="#contact">Contact me</a></li>
 				    </ul>
 				</nav>
@@ -223,6 +224,18 @@
 				<ul>
 				  <li><a href="https://kmb.hk/kmbtoday/202204/assets/downloads/publication.pdf">
 				  Tailor-made Air curtain on rear door of double decker buses with own design by using Solidwork
+				  </a></li>
+				</ul>
+			</div>
+		</div>
+		
+		<!-- Solid Works -->
+		<div class="solidwork section second" id="solidwork">
+			<div class="container">
+				<h1><i class="fa fa-trophy"></i>Solid Work Samples</h1>
+				<ul>
+				  <li><a href="windturbine.html">
+				  Wind Turbine
 				  </a></li>
 				</ul>
 			</div>
