--- a/samwong.html
+++ b/samwong.html
@@ -234,8 +234,42 @@
 			<div class="container">
 				<h1><i class="fa fa-trophy"></i>Solid Work Samples</h1>
 				<ul>
-				  <li><a href="windturbine.html">
-				  Wind Turbine
+				  <li><a href="windcurtain.html">
+				  Wind Curtain
+				  </a></li>
+				  <li>Garbage Block
+				    <dd>- <a href="garbageblock1.html">
+				    Garbage Block Head
+				    </a>
+					</dd>
+					<dd>- <a href="garbageblock2.html">
+				    Garbage Block Back
+				    </a>
+					</dd>
+					<dd>- <a href="garbageblock3.html">
+				    Garbage Block Seat
+				    </a>
+					</dd>
+					<dd>- <a href="garbageblock4.html">
+				    Garbage Block
+				    </a>
+					<dd>- <a href="garbageblock5.html">
+				    Garbage Block Assembly
+				    </a>
+					</dd>
+				  </li>
+				  <li><a href="linearmotor.html">
+				  Linear Motor
+				  </a></li>
+				  <li> Thermoelectric Generator
+				  	<dd>- <a href="TE1.html">
+				    Heat Sink
+				    </a>
+					</dd>
+					<dd>- <a href="TE2.html">
+				    Thermoelectric Generator
+				    </a>
+					</dd>
 				  </a></li>
 				</ul>
 			</div>
